app/service.yml
apiVersion: v1  
kind: Service  
metadata:  
  name: my-app 
  labels:  
    app: nginx  
spec:  
  type: LoadBalancer  
  ports:  
  - name: "http"  
    port: 80  
    targetPort: 80  
  selector:  
    app: nginx
