app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - myappkhaled.duckdns.org
    secretName: app-tls-secret-kgq7q  # cert-manager will create this secret
  rules:
  - host: myappkhaled.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  my-app 
            port:
              number: 80
